--- a/src/components/CurrentDay/CurrentDay.module.css
+++ b/src/components/CurrentDay/CurrentDay.module.css
@@ -4,15 +4,22 @@
 
 .cardInner {
     z-index: 1;
+    width: 100%;
     height: 300px;
+    background:linear-gradient(0deg, rgba(0, 189, 247, 0.3), rgba(4, 184, 255, 0.3)), url('./assets/blue-clouds.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: var(--main-border-radius);
 }
-
+.textInner {
+    margin-left: 7px;
+}
 .gradient {
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    /* top: 0; */
+    /* left: 0; */
     background-image: var(--gradient);
     background-size: cover;
     border-radius: var(--main-border-radius);
@@ -22,12 +29,13 @@
 .img {
     position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-image: url('./assets/weather.jpg');
+    height: 300px;
+    /* top: 0; */
+    /* left: 0; */
+    background-image: url('./assets/mountain.jpg');
     background-size: cover;
     border-radius: var(--main-border-radius);
+    /* z-index: -1; */
 }
 
 .weekday {
