--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
     --gradient: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
-    --bg-color: #343d4b;
+    --bg-color: #ffffff;
     --bg-color--card: #222831;
 
     --main-text-color: #ffffff;
