--- a/src/Layout/Page/Page.module.css
+++ b/src/Layout/Page/Page.module.css
@@ -12,3 +12,36 @@
     max-width: 675px;
     min-height: 300px;
 }
+
+.button {
+    align-self: center;
+    border: none;
+    border-radius: var(--main-border-radius);
+    padding: 0.65rem;
+    background-image: var(--gradient);
+    color: var(--main-text-color);
+    font-weight: 700;
+    box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    line-height: initial;
+    width: 30%;
+    height: 38px;
+}
+
+.button:hover {
+    color: var(--main-text-color);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+}
+
+.buttonDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 85%;
+    max-width: 675px;
+    /* min-height: 300px; */
+    margin-top: 30px;
+  }
