--- a/src/Layout/Error/Error.module.css
+++ b/src/Layout/Error/Error.module.css
@@ -4,3 +4,9 @@
     padding: 20px 0px 0px 0px ;
     text-align: center;
 }
+
+@media only screen and (max-width: 650px) {
+    .error {
+        font-size: 13px;
+    }
+}
