--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,7 +1,7 @@
-.form {
+/* .form {
     padding-bottom: 50px;
     margin-bottom: 30px;
-}
+} */
 .input {
     border-radius: var(--main-border-radius);
     margin-bottom: 1rem;
